# ROS2_Linux

./: CMakeLists.txt  Comandos  GIT INSTRUCCIONES NUEVAS.txt  README.md  comandos terminal  package.xml
dadumo/: CMakeLists.txt  package.xml
dadumo_capture_image/: instruccionesCamara  package.xml  setup.cfg  setup.py
dadumo_capture_image/dadumo_capture_image/: capturar.py  capturar_mov.py
dadumo_capture_image/launch/: dadumo_capture_image_launch.launch.py
dadumo_capture_image/recursos_opencv/: procesamiento_proyecto.py
dadumo_world/: CMakeLists.txt  package.xml
dadumo_world/launch/: turtlebot3_my_world.launch.py
dadumo_world/models/BlueTrashBin/: model.config  model.sdf
dadumo_world/models/BrownTrashBin/: model.config  model.sdf
dadumo_world/models/YellowTrashBin/: model.config  model.sdf
dadumo_world/models/coke_can/: model.config
dadumo_world/world/: burger.model  burger_pi.model
my_nav2_system/: package.xml  setup.py
my_nav2_system/config/: my_map.yaml  my_nav2_params.yaml  my_nav2_params_sim.yaml  my_real.pgm  my_real.yaml  my_sim.pgm  my_sim.yaml
my_nav2_system/launch/: my_nav2_waypoints_follower.launch.py  my_nav2_waypoints_real.launch.py  my_tb3_sim_nav2.launch.py  my_tb3_sim_nav2_real.launch.py
my_nav2_system/my_nav2_system/: initial_pose_publisher.py  my_waypoint_follower.py  my_waypoint_follower_sim.py  navigate_to_pose_client.py
world/: burger.model
